# kaktus-promo

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/kaktus_promo/: __init__.py  __main__.py
tests/: test_kaktus_promo.py
